2002-02-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* NEWS: Mention changes to X11 outboard driver path and removal of
 	--with-x11-driver.

	* INSTALL: Update configure --help excerpt: mention --exec-prefix,
 	explain gnuplot_x11 installation place, and remove mention of
 	--with-x11-driver option.  Change instructions on running
 	un-installed gnuplot to use GNUPLOT_DRIVER_DIR instead of PATH
 	overrides.

2002-02-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/stdfn.h src/stdfn.c src/command.c: Let the
	'pause' command support subsecond waiting time resolution. Macro 
	GP_SLEEP uses the high-resolution sleep if available for specified
	compilers, or uses usleep() if defined HAVE_USLEEP.

2002-02-14  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in: Add check for usleep().

	* demo/Makefile.am.in: Pass GNUPLOT_DRIVER_DIR in the environment to
	let gnuplot use the uninstalled X11 driver.

	* man/Makefile.am: Fix lasergnu installation to honour DESTDIR.

	* src/Makefile.am: Install gnuplot_x11 into $(pkglibdir)/$(PKG_MAJOR)
	instead of $(bindir).

2002-02-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c: Don't change splot view if there is a log axis with a
	negative range coordinate.

	* src/unset.c: Remove #ifdef USE_MOUSE inside another USE_MOUSE.

2002-02-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/x11.trm: #include <ctype.h>.  Some stylistic changes here and
	there.
	[USE_X11_DRIVER]: Conditionalized the existence of the 'driver' option
	upon this macro. Turned off by default.
	(X11_full_command_path): New variable, stores path-expanded name of
	gnuplot_x11 driver.
	(parse_driver): Replaced free+alloc by a realloc, and individual
 	comparisons by isspace() calls.  Implemented expansion of gnuplot_x11 
	driver command name by prepending the environment variable 
	$GNUPLOT_DRIVER_DIR if that is defined and valid, or the default 
	configure'd X11_DRIVER_DIR if not.